--- a/conclusions.tex
+++ b/conclusions.tex
@@ -5,8 +5,8 @@
 The work is done ...
 
 \vspace{0.5 cm} 
-\section{Future Work}
-\label{sec:evalres}
+\section{Future work}
+\label{sec:future}
 \vspace{0.5 cm} 
 
 Write about future work ...
