--- a/evaluation.tex
+++ b/evaluation.tex
@@ -1,12 +1,12 @@
 \chapter{Evaluation}
-\label{cha:implementation}
+\label{cha:evaluation}
 \vspace{0.5 cm} 
 
 Write about the implementation ...
 
 \vspace{0.5 cm} 
 \section{Experimental validation}
-\label{sec:evalres}
+\label{sec:expval}
 \vspace{0.5 cm} 
 
 Write about the experiments ...
