--- a/implementation.tex
+++ b/implementation.tex
@@ -6,16 +6,16 @@ Write about the implementation ...
 
 
 \vspace{0.5 cm} 
-\section{Implementation of the Raspberry Pi}
-\label{sec:impwork}
+\section{Sniffer implementation}
+\label{sec:sniffer}
 \vspace{0.5 cm} 
 
-Write how Raspberry Pi has implemented ...
+Write how the sniffer has been implemented on the Raspberry Pi ...
 
 
 \vspace{0.5 cm} 
 \section{Implementation of the server for analysis}
-\label{sec:impwork}
+\label{sec:implser}
 \vspace{0.5 cm} 
 
 Write how server for analysis has implemented ...
