--- a/state_of_art.tex
+++ b/state_of_art.tex
@@ -29,7 +29,7 @@ What are the methods for count the people ...
 
 \vspace{0.5 cm} 
 \subsection{Why probe requests?}
-\label{sec:bus}
+\label{sec:probe}
 \vspace{0.5 cm}
 
 Here there are two interesting articles
