--- a/system_design.tex
+++ b/system_design.tex
@@ -7,7 +7,7 @@ Write about the methodology and the choices in the system design ...
 
 \vspace{0.5 cm} 
 \section{System architecture}
-\label{sec:collection}
+\label{sec:sysarc}
 \vspace{0.5 cm} 
 
 Describe the system architecture ...
