--- a/abstract.tex
+++ b/abstract.tex
@@ -4,7 +4,7 @@
 \addcontentsline{toc}{chapter}{Abstract} % da aggiungere comunque all'indice
 \vspace{0.5 cm} 
 
-Sentence that describes the problem ...
+Sentence that describes the problem \dots
 
 	The abstract is a short summary of the work describing the target, the subject of the thesis, the methodology 
 and the techniques, the data collection and elaboration, the explanation of the reached results and the conclusion.
