--- a/bibliography.bib
+++ b/bibliography.bib
@@ -19,7 +19,7 @@
 % esportati direttamente da google scholar:
 % articoli sulla stima di persone sui bus
 @inproceedings{handte2014crowd,
-  title={Crowd Density Estimation for Public Transport Vehicles},
+  title={Crowd density estimation for public transport vehicles},
   author={Handte, Marcus and Iqbal, Muhammad Umer and Wagner, Stephan and Apolinarski, Wolfgang and Marr{\'o}n, Pedro Jos{\'e} and Navarro, Eva Maria Mu{\~n}oz and Martinez, Santiago and Barthelemy, Sara Izquierdo and Fern{\'a}ndez, Mario Gonz{\'a}lez},
   booktitle={EDBT/ICDT Workshops},
   pages={315--322},
@@ -29,7 +29,7 @@
 @article{handte2016internet,
   title={An internet-of-things enabled connected navigation system for urban bus riders},
   author={Handte, Marcus and Foell, Stefan and Wagner, Stephan and Kortuem, Gerd and Marr{\'o}n, Pedro Jos{\'e}},
-  journal={IEEE internet of things journal},
+  journal={IEEE Internet of Things Journal},
   volume={3},
   number={5},
   pages={735--744},
@@ -47,7 +47,7 @@
 }
 
 @inproceedings{mehmood2019occupancy,
-  title={Occupancy Estimation using {WiFi}: a Case Study for Counting Passengers on Busses},
+  title={Occupancy estimation using {WiFi}: A case study for counting passengers on busses},
   author={Mehmood, Ubaid and Moser, I and Jayaraman, Prem Prakash and Banerjee, Abhik},
   booktitle={2019 IEEE 5th World Forum on Internet of Things (WF-IoT)},
   pages={165--170},
@@ -65,7 +65,7 @@
 }
 
 @inproceedings{mikkelsen2018sensing,
-  title={Sensing Quality and Estimation of Public Transport Occupancy During Live Operation},
+  title={Sensing quality and estimation of public transport occupancy during live operation},
   author={Mikkelsen, Lars and Schwefel, Hans-Peter and Madsen, Tatiana},
   booktitle={2018 IEEE 17th International Symposium on Network Computing and Applications (NCA)},
   pages={1--4},
@@ -83,7 +83,7 @@
 }
 
 @inproceedings{nishide2019filter,
-  title={Filter Efficiency Analysis for Extracting Mobile Device Signals to Estimate Bus Passengers Population},
+  title={Filter efficiency analysis for extracting mobile device signals to estimate bus passengers population},
   author={Nishide, Ryo},
   booktitle={Proceedings of the 7th IIAE International Conference on Intelligent Systems and Image Processing},
   year={2019}
@@ -108,14 +108,14 @@
 
 % altri articoli visti da valutare
 @article{song2017real,
-  title={Real-time public transport service-level monitoring using passive {WiFi}: a spectral clustering approach for train timetable estimation},
+  title={Real-time public transport service-level monitoring using passive {WiFi}: A spectral clustering approach for train timetable estimation},
   author={Song, Baoyang and Wynter, Laura},
   journal={arXiv preprint arXiv:1703.00759},
   year={2017}
 }
 
 @article{hidayat2018wifi,
-  title={{WiFi} scanner technologies for obtaining travel data about circulator bus passengers: case study in {Obuse}, {Nagano} {Prefecture}, {Japan}},
+  title={{WiFi} scanner technologies for obtaining travel data about circulator bus passengers: Case study in {Obuse}, {Nagano} {Prefecture}, {Japan}},
   author={Hidayat, Arief and Terabe, Shintaro and Yaginuma, Hideki},
   journal={Transportation Research Record},
   volume={2672},
@@ -193,7 +193,7 @@
 }
 
 @inproceedings{shibata2019people,
-  title={People Crowd Density Estimation System using Deep Learning for Radio Wave Sensing of Cellular Communication},
+  title={People crowd density estimation system using deep learning for radio wave sensing of cellular communication},
   author={Shibata, Kyosuke and Yamamoto, Hiroshi},
   booktitle={2019 International Conference on Artificial Intelligence in Information and Communication (ICAIIC)},
   pages={143--148},
@@ -249,7 +249,7 @@
 }
 
 @inproceedings{brockmann2018cutiqueue,
-  title={{CutiQueue}: people Counting in Waiting Lines Using {Bluetooth Low Energy} Based Passive Presence Detection},
+  title={{CutiQueue}: People counting in waiting lines using {Bluetooth Low Energy} based passive presence detection},
   author={Brockmann, Falk and Handte, Marcus and Marr{\'o}n, Pedro Jos{\'e}},
   booktitle={2018 14th International Conference on Intelligent Environments (IE)},
   pages={1--8},
@@ -259,7 +259,7 @@
 
 % crowd analysis
 @article{singh2020crowd,
-  title={Crowd Forecasting based on {WiFi} Sensors and {LSTM} Neural Networks},
+  title={Crowd forecasting based on {WiFi} sensors and {LSTM} neural networks},
   author={Singh, Utkarsh and Determe, Jean-Fran{\c{c}}ois and Horlin, Fran{\c{c}}ois and De Doncker, Philippe},
   journal={IEEE Transactions on Instrumentation and Measurement},
   year={2020},
@@ -296,7 +296,7 @@
 }
 
 @inproceedings{uras2019pma,
-  title={{PmA}: a solution for people mobility monitoring and analysis based on {WiFi} probes},
+  title={{PmA}: A solution for people mobility monitoring and analysis based on {WiFi} probes},
   author={Uras, Marco and Cossu, Raimondo and Atzori, Luigi},
   booktitle={2019 4th International Conference on Smart and Sustainable Technologies (SpliTech)},
   pages={1--6},
@@ -305,15 +305,15 @@
 }
 
 @inproceedings{barbera2013signals,
-  title={Signals from the crowd: uncovering social relationships through smartphone probes},
+  title={Signals from the crowd: Uncovering social relationships through smartphone probes},
   author={Barbera, Marco V and Epasto, Alessandro and Mei, Alessandro and Perta, Vasile C and Stefa, Julinda},
-  booktitle={Proceedings of the 2013 conference on Internet measurement conference},
+  booktitle={Proceedings of the 2013 Conference on Internet Measurement Conference},
   pages={265--276},
   year={2013}
 }
 
 @article{zhou2020understanding,
-  title={Understanding Crowd Behaviors in a Social Event by Passive {WiFi} Sensing and Data Mining},
+  title={Understanding crowd behaviors in a social event by passive {WiFi} sensing and data mining},
   author={Zhou, Yuren and Lau, Billy Pik Lik and Koh, Zann and Yuen, Chau and Ng, Benny Kai Kiat},
   journal={IEEE Internet of Things Journal},
   year={2020},
@@ -321,7 +321,7 @@
 }
 
 @article{huang2019pedestrian,
-  title={Pedestrian Flow Estimation Through Passive {WiFi} Sensing},
+  title={Pedestrian flow estimation through passive {WiFi} sensing},
   author={Huang, Baoqi and Mao, Guoqiang and Qin, Yong and Wei, Yun},
   journal={IEEE Transactions on Mobile Computing},
   year={2019},
@@ -329,7 +329,7 @@
 }
 
 @article{kulshrestha2019real,
-  title={Real-time Crowd Monitoring using Seamless Indoor-Outdoor Localization},
+  title={Real-time crowd monitoring using seamless indoor-outdoor localization},
   author={Kulshrestha, Tarun and Saxena, Divya and Niyogi, Rajdeep and Cao, Jiannong},
   journal={IEEE Transactions on Mobile Computing},
   year={2019},
@@ -348,7 +348,7 @@
 }
 
 @inproceedings{di2016trained,
-  title={Trained-once device-free crowd counting and occupancy estimation using {WiFi}: a {Doppler} spectrum based approach},
+  title={Trained-once device-free crowd counting and occupancy estimation using {WiFi}: A {Doppler} spectrum based approach},
   author={Di Domenico, Simone and Pecoraro, Giovanni and Cianca, Ernestina and De Sanctis, Mauro},
   booktitle={2016 IEEE 12th International Conference on Wireless and Mobile Computing, Networking and Communications (WiMob)},
   pages={1--8},
@@ -369,7 +369,7 @@
 @article{tang2018indoor,
   title={Indoor crowd density estimation through mobile smartphone {Wi-Fi} probes},
   author={Tang, Xiaoyong and Xiao, Bin and Li, Kenli},
-  journal={IEEE transactions on systems, man, and cybernetics: systems},
+  journal={IEEE Transactions on Systems, Man, and Cybernetics: Systems},
   year={2018},
   publisher={IEEE}
 }
@@ -402,7 +402,7 @@
 }
 
 @article{oliveira2019mobile,
-  title={Mobile Device Detection Through {WiFi} Probe Request Analysis},
+  title={Mobile device detection through {WiFi} probe request analysis},
   author={Oliveira, Luiz and Schneider, Daniel and De Souza, Jano and Shen, Weiming},
   journal={IEEE Access},
   volume={7},
@@ -421,7 +421,7 @@
 }
 
 @inproceedings{oliveira2018sherlock,
-  title={Sherlock: capturing probe requests for automatic presence detection},
+  title={Sherlock: Capturing probe requests for automatic presence detection},
   author={Oliveira, Luiz and Henrique, Jo{\~a}o and Schneider, Daniel and de Souza, Jano and Rodriques, S{\'e}rgio and Sherr, Weiming},
   booktitle={2018 IEEE 22nd International Conference on Computer Supported Cooperative Work in Design ((CSCWD))},
   pages={848--853},
@@ -450,7 +450,7 @@
 }
 
 @inproceedings{nunes2017beanstalk,
-  title={Beanstalk: a community based passive {Wi-Fi} tracking system for analysing tourism dynamics},
+  title={Beanstalk: A community based passive {Wi-Fi} tracking system for analysing tourism dynamics},
   author={Nunes, Nuno and Ribeiro, Miguel and Prandi, Catia and Nisi, Valentina},
   booktitle={Proceedings of the ACM SIGCHI Symposium on Engineering Interactive Computing Systems},
   pages={93--98},
@@ -468,7 +468,7 @@
 }
 
 @article{shen2018snow,
-  title={{SNOW}: detecting shopping groups using {WiFi}},
+  title={{SNOW}: Detecting shopping groups using {WiFi}},
   author={Shen, Jiaxing and Cao, Jiannong and Liu, Xuefeng and Tang, Shaojie},
   journal={IEEE Internet of Things Journal},
   volume={5},
@@ -488,7 +488,7 @@
 }
 
 @inproceedings{di2016mind,
-  title={Mind your probes: de-anonymization of large crowds through smartphone {WiFi} probe requests},
+  title={Mind your probes: De-anonymization of large crowds through smartphone {WiFi} probe requests},
   author={Di Luzio, Adriano and Mei, Alessandro and Stefa, Julinda},
   booktitle={IEEE INFOCOM 2016-The 35th Annual IEEE International Conference on Computer Communications},
   pages={1--9},
