--- a/conclusions.tex
+++ b/conclusions.tex
@@ -2,11 +2,11 @@
 \label{cha:conclusions}
 \vspace{0.5 cm} 
 
-The work is done ...
+The work is done \dots
 
 \vspace{0.5 cm} 
 \section{Future work}
 \label{sec:future}
 \vspace{0.5 cm} 
 
-Write about future work ...
+Write about future work \dots
