--- a/evaluation.tex
+++ b/evaluation.tex
@@ -2,14 +2,14 @@
 \label{cha:evaluation}
 \vspace{0.5 cm} 
 
-Write about the implementation ...
+Write about the implementation \dots
 
 \vspace{0.5 cm} 
 \section{Experimental validation}
 \label{sec:expval}
 \vspace{0.5 cm} 
 
-Write about the experiments ...
+Write about the experiments \dots
 
 
 \vspace{0.5 cm} 
@@ -17,4 +17,4 @@ Write about the experiments ...
 \label{sec:evalres}
 \vspace{0.5 cm} 
 
-Write an evaluation ...
+Write an evaluation \dots
