--- a/introduction.tex
+++ b/introduction.tex
@@ -2,14 +2,14 @@
 \label{cha:intro}
 \vspace{0.5 cm} 
 
-Brief introduction to the work ...
+Brief introduction to the work @ U-Hopper.\footnote{ website \href{https://www.u-hopper.com/big-data-analytics/site/index/en}{u-hopper.com}}
 
 \vspace{0.5 cm} 
 \section{Problem statement}
 \label{sec:problem}
 \vspace{0.5 cm} 
 
-This is the problem ...
+This is the problem \dots
 
 
 \vspace{0.5 cm} 
@@ -17,7 +17,7 @@ This is the problem ...
 \label{sec:approach}
 \vspace{0.5 cm} 
 
-This is the approach ...
+This is the approach \dots
 
 
 \vspace{0.5 cm} 
@@ -25,4 +25,4 @@ This is the approach ...
 \label{sec:outline}
 \vspace{0.5 cm} 
 
-Here it is written how the thesis is organized ...
+Here it is written how the thesis is organized \dots
