--- a/state_of_art.tex
+++ b/state_of_art.tex
@@ -2,7 +2,7 @@
 \label{cha:soa}
 \vspace{0.5 cm} 
 
-Literature review ...
+Literature review \dots
 
 
 \vspace{0.5 cm} 
@@ -10,7 +10,7 @@ Literature review ...
 \label{sec:crowd}
 \vspace{0.5 cm} 
 
-Analyze the crowd ...
+Analyze the crowd \dots
 
 
 \vspace{0.5 cm} 
@@ -18,7 +18,7 @@ Analyze the crowd ...
 \label{sec:count}
 \vspace{0.5 cm} 
 
-What are the methods for count the people ...
+What are the methods for count the people \dots
 
 
 \vspace{0.5 cm} 
@@ -38,5 +38,5 @@ Here there are two interesting articles
 
 % viene tenuto l'ordine per cognome nelle citazioni in automatico
 
-Something else ...
+Something else \dots
 \cite{nishide2019filter}
