--- a/system_design.tex
+++ b/system_design.tex
@@ -2,7 +2,7 @@
 \label{cha:system}
 \vspace{0.5 cm} 
 
-Write about the methodology and the choices in the system design ...
+Write about the methodology and the choices in the system design \dots
 
 
 \vspace{0.5 cm} 
@@ -10,7 +10,7 @@ Write about the methodology and the choices in the system design ...
 \label{sec:sysarc}
 \vspace{0.5 cm} 
 
-Describe the system architecture ...
+Describe the system architecture \dots
 
 
 \vspace{0.5 cm} 
@@ -18,7 +18,7 @@ Describe the system architecture ...
 \label{sec:collection}
 \vspace{0.5 cm} 
 
-How I collected data ...
+How I collected data \dots
 
 
 \vspace{0.5 cm} 
@@ -26,7 +26,7 @@ How I collected data ...
 \label{sec:transfer}
 \vspace{0.5 cm} 
 
-How I got the data ...
+How I got the data \dots
 
 
 \vspace{0.5 cm} 
@@ -34,4 +34,4 @@ How I got the data ...
 \label{sec:analysis}
 \vspace{0.5 cm} 
 
-How I analyzed data ...
+How I analyzed data \dots
