--- a/implementation.tex
+++ b/implementation.tex
@@ -2,7 +2,7 @@
 \label{cha:implementation}
 \vspace{0.5 cm} 
 
-Write about the implementation ...
+Write about the implementation \dots
 
 
 \vspace{0.5 cm} 
@@ -10,7 +10,7 @@ Write about the implementation ...
 \label{sec:sniffer}
 \vspace{0.5 cm} 
 
-Write how the sniffer has been implemented on the Raspberry Pi ...
+Write how the sniffer has been implemented on the Raspberry Pi \dots
 
 
 \vspace{0.5 cm} 
@@ -18,4 +18,4 @@ Write how the sniffer has been implemented on the Raspberry Pi ...
 \label{sec:implser}
 \vspace{0.5 cm} 
 
-Write how server for analysis has implemented ...
+Write how server for analysis has implemented \dots
