--- a/acknowledgments.tex
+++ b/acknowledgments.tex
@@ -8,5 +8,5 @@
 
 
 \emph{
-  \dots{ thanks to my family, my girlfriend, my supervisors and all the U-Hopper Team }\dots
+  \dots{ thanks to my family, my girlfriend, my supervisors and all the U-Hopper team }\dots
 }
