--- a/state_of_art.tex
+++ b/state_of_art.tex
@@ -26,17 +26,17 @@ What are the methods for count the people \dots
 \label{sec:bus}
 \vspace{0.5 cm}
 
+Here there are two interesting articles
+\cite{nishide2019filter} \cite{mikkelsen2016public}.
+
+% viene tenuto l'ordine per cognome nelle citazioni in automatico
+
+Something else \cite{mehmood2019occupancy} \dots
+
 
 \vspace{0.5 cm} 
 \subsection{Why probe requests?}
 \label{sec:probe}
 \vspace{0.5 cm}
 
-Here there are two interesting articles
-\cite{mikkelsen2016public}
-\cite{mehmood2019occupancy}
-
-% viene tenuto l'ordine per cognome nelle citazioni in automatico
-
-Something else \dots
-\cite{nishide2019filter}
+Wi-Fi spproach \dots
