--- a/Bortolin_Samuel_thesis_20.tex
+++ b/Bortolin_Samuel_thesis_20.tex
@@ -22,13 +22,13 @@
 \usepackage{afterpage}
 \usepackage[paperheight=29.7cm, paperwidth=21cm, outer=1.5cm, inner=2.5cm, top=2cm, bottom=2cm]{geometry} % per definizione layout
 \usepackage{titlesec} % per formato custom dei titoli dei capitoli
-\usepackage{hyperref} % per i collegamenti ipertestuali
+\usepackage{hyperref} % per i collegamenti ipertestuali, da togliere per la consegna della tesi
 
 %%%%%%%%%%%%%%
 % supporto lettere accentate
 %
-%\usepackage[latin1]{inputenc} % per Windows;
-%\usepackage[utf8x]{inputenc} % per Linux (richiede il pacchetto unicode);
+% \usepackage[latin1]{inputenc} % per Windows;
+% \usepackage[utf8x]{inputenc} % per Linux (richiede il pacchetto unicode);
 \usepackage[applemac]{inputenc} % per Mac.
 
 \singlespacing
@@ -182,10 +182,10 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
     
 
-    %titleformat{\chapter}
-    %    {\normalfont\Huge\bfseries}{Attachment \thechapter}{1em}{}
+    % titleformat{\chapter}
+    %     {\normalfont\Huge\bfseries}{Attachment \thechapter}{1em}{}
     % sezione Allegati - opzionale
-    %\appendix
-    %\input{attachments}
+    % \appendix
+    % \input{attachments}
 
 \end{document}
