--- a/bibliography.bib
+++ b/bibliography.bib
@@ -257,6 +257,66 @@
   organization={IEEE}
 }
 
+@article{liu2019estimating,
+  title={Estimating people flows to better count them in crowded scenes},
+  author={Liu, Weizhe and Salzmann, Mathieu and Fua, Pascal},
+  journal={arXiv preprint arXiv:1911.10782},
+  year={2019}
+}
+
+@article{sam2019locate,
+  title={Locate, size and count: Accurately resolving people in dense crowds via detection},
+  author={Sam, Deepak Babu and Peri, Skand Vishwanath and Kamath, Amogh and Babu, R Venkatesh and others},
+  journal={arXiv preprint arXiv:1906.07538},
+  year={2019}
+}
+
+@article{stahl2018divide,
+  title={Divide and count: Generic object counting by image divisions},
+  author={Stahl, Tobias and Pintea, Silvia L and van Gemert, Jan C},
+  journal={IEEE Transactions on Image Processing},
+  volume={28},
+  number={2},
+  pages={1035--1044},
+  year={2018},
+  publisher={IEEE}
+}
+
+@article{zhang2018auxiliary,
+  title={Auxiliary learning for crowd counting via count-net},
+  author={Zhang, Youmei and Chang, Faliang and Wang, Mengdi and Zhang, Fulei and Han, Chao},
+  journal={Neurocomputing},
+  volume={273},
+  pages={190--198},
+  year={2018},
+  publisher={Elsevier}
+}
+
+@inproceedings{kannan2012low,
+  title={Low cost crowd counting using audio tones},
+  author={Kannan, Pravein Govindan and Venkatagiri, Seshadri Padmanabha and Chan, Mun Choon and Ananda, Akhihebbal L and Peh, Li-Shiuan},
+  booktitle={Proceedings of the 10th ACM Conference on Embedded Network Sensor Systems},
+  pages={155--168},
+  year={2012}
+}
+
+@inproceedings{valle2016abroa,
+  title={{ABROA}: Audio-based room-occupancy analysis using {Gaussian} mixtures and hidden {Markov} models},
+  author={Valle, Rafael},
+  booktitle={2016 Future Technologies Conference (FTC)},
+  pages={1270--1273},
+  year={2016},
+  organization={IEEE}
+}
+
+@inproceedings{orr2000smart,
+  title={The smart floor: A mechanism for natural user identification and tracking},
+  author={Orr, Robert J and Abowd, Gregory D},
+  booktitle={CHI'00 extended abstracts on Human factors in computing systems},
+  pages={275--276},
+  year={2000}
+}
+
 % crowd analysis
 @article{singh2020crowd,
   title={Crowd forecasting based on {WiFi} sensors and {LSTM} neural networks},
@@ -523,4 +583,12 @@
   pages={123--130},
   year={2018},
   organization={IEEE}
+}
+
+@inproceedings{prasertsung2017does,
+  title={How does coffee shop get crowded? Using {WiFi} footprints to deliver insights into the success of promotion},
+  author={Prasertsung, Pichaya and Horanont, Teerayut},
+  booktitle={Proceedings of the 2017 ACM International Joint Conference on Pervasive and Ubiquitous Computing and Proceedings of the 2017 ACM International Symposium on Wearable Computers},
+  pages={421--426},
+  year={2017}
 }
