--- a/conclusions.tex
+++ b/conclusions.tex
@@ -2,7 +2,7 @@
 \label{cha:conclusions}
 \vspace{0.5 cm} 
 
-The work is done \dots
+Conclusions on the work done \dots
 
 \vspace{0.5 cm} 
 \section{Future work}
