--- a/evaluation.tex
+++ b/evaluation.tex
@@ -2,7 +2,7 @@
 \label{cha:evaluation}
 \vspace{0.5 cm} 
 
-Write about the implementation \dots
+Write about the evaluation case study \dots
 
 \vspace{0.5 cm} 
 \section{Experimental validation}
@@ -17,4 +17,4 @@ Write about the experiments \dots
 \label{sec:evalres}
 \vspace{0.5 cm} 
 
-Write an evaluation \dots
+Write the evaluation \dots
