--- a/introduction.tex
+++ b/introduction.tex
@@ -2,7 +2,8 @@
 \label{cha:intro}
 \vspace{0.5 cm} 
 
-Brief introduction to the work @ U-Hopper.\footnote{ website \href{https://www.u-hopper.com/big-data-analytics/site/index/en}{u-hopper.com}}
+Brief introduction to the work @ U-Hopper.\footnote{ website u-hopper.com }
+
 
 \vspace{0.5 cm} 
 \section{Problem statement}
