--- a/state_of_art.tex
+++ b/state_of_art.tex
@@ -6,14 +6,6 @@ Literature review \dots
 
 
 \vspace{0.5 cm} 
-\section{Crowd analysis}
-\label{sec:crowd}
-\vspace{0.5 cm} 
-
-Analyze the crowd \dots
-
-
-\vspace{0.5 cm} 
 \section{People counting methods}
 \label{sec:count}
 \vspace{0.5 cm} 
@@ -22,7 +14,15 @@ What are the methods for count the people \dots
 
 
 \vspace{0.5 cm} 
-\subsection{People estimation on buses}
+\section{Wi-Fi probe request frames methods}
+\label{sec:probe}
+\vspace{0.5 cm}
+
+Wi-Fi spproach \dots
+
+
+\vspace{0.5 cm} 
+\subsection{People estimation on public transports}
 \label{sec:bus}
 \vspace{0.5 cm}
 
@@ -32,11 +32,3 @@ Here there are two interesting articles
 % viene tenuto l'ordine per cognome nelle citazioni in automatico
 
 Something else \cite{mehmood2019occupancy} \dots
-
-
-\vspace{0.5 cm} 
-\subsection{Why probe requests?}
-\label{sec:probe}
-\vspace{0.5 cm}
-
-Wi-Fi spproach \dots
