--- a/system_design.tex
+++ b/system_design.tex
@@ -18,7 +18,7 @@ Describe the system architecture \dots
 \label{sec:collection}
 \vspace{0.5 cm} 
 
-How I collected data \dots
+How I collected the data \dots
 
 
 \vspace{0.5 cm} 
@@ -26,7 +26,7 @@ How I collected data \dots
 \label{sec:transfer}
 \vspace{0.5 cm} 
 
-How I got the data \dots
+How I used the MQTT protocol to forward the data \dots
 
 
 \vspace{0.5 cm} 
@@ -34,4 +34,4 @@ How I got the data \dots
 \label{sec:analysis}
 \vspace{0.5 cm} 
 
-How I analyzed data \dots
+How I analyzed the data \dots
