--- a/implementation.tex
+++ b/implementation.tex
@@ -13,9 +13,17 @@ Write about the implementation \dots
 Write how the sniffer has been implemented on the Raspberry Pi \dots
 
 
+% \vspace{0.5 cm} 
+% \section{Implementation of broker MQTT}
+% \label{sec:broker}
+% \vspace{0.5 cm} 
+
+% Write how the broker MQTT has been implemented \dots
+
+
 \vspace{0.5 cm} 
-\section{Implementation of the server for analysis}
-\label{sec:implser}
+\section{Implementation of the Back-End}
+\label{sec:backend}
 \vspace{0.5 cm} 
 
-Write how server for analysis has implemented \dots
+Write how the Back-End for analysis has been implemented \dots
