--- a/conclusions.tex
+++ b/conclusions.tex
@@ -2,7 +2,7 @@
 \label{cha:conclusions}
 \vspace{0.5 cm} 
 
-Conclusions on the work done \dots
+Write conclusions about the work done \dots
 
 \vspace{0.5 cm} 
 \section{Future work}
