--- a/template_tesi_laurea_latex/cognome_nome_laurea_aa.tex
+++ b/template_tesi_laurea_latex/cognome_nome_laurea_aa.tex
@@ -14,39 +14,31 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % formato FRONTE RETRO
-\documentclass[epsfig, a4paper, 11pt, titlepage, twoside, openany]{book}
+\documentclass[epsfig,a4paper,11pt,titlepage,twoside,openany]{book}
 \usepackage{epsfig}
 \usepackage{plain}
 \usepackage{setspace}
-\usepackage{array}
-\usepackage{afterpage}
-\usepackage[paperheight=29.7cm, paperwidth=21cm, outer=1.5cm, inner=2.5cm, top=2cm, bottom=2cm]{geometry} % per definizione layout
+\usepackage[paperheight=29.7cm,paperwidth=21cm,outer=1.5cm,inner=2.5cm,top=2cm,bottom=2cm]{geometry} % per definizione layout
 \usepackage{titlesec} % per formato custom dei titoli dei capitoli
-% \usepackage{hyperref} % per i collegamenti ipertestuali, da togliere per la consegna della tesi
 
 %%%%%%%%%%%%%%
 % supporto lettere accentate
 %
-% \usepackage[latin1]{inputenc} % per Windows;
-% \usepackage[utf8x]{inputenc} % per Linux (richiede il pacchetto unicode);
-\usepackage[applemac]{inputenc} % per Mac.
+%\usepackage[latin1]{inputenc} % per Windows;
+\usepackage[utf8x]{inputenc} % per Linux (richiede il pacchetto unicode);
+%\usepackage[applemac]{inputenc} % per Mac.
 
 \singlespacing
 
-\usepackage[english]{babel}
-\usepackage{chngcntr}
-\counterwithout{footnote}{chapter}
-
-\usepackage[autostyle,italian=guillemets]{csquotes}
-\usepackage[backend=bibtex, maxbibnames=10, style=numeric]{biblatex}
-\addbibresource{bibliography.bib}
+\usepackage[italian]{babel}
 
 \begin{document}
 
   % nessuna numerazione
   \pagenumbering{gobble} 
-  \input{first_page}
-  \cleardoublepage
+  \input{pagina_iniziale}
+
+  \clearpage
  
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -55,10 +47,9 @@
 %% Sezione Ringraziamenti opzionale
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-  \input{acknowledgments}
+  \input{ringraziamenti}
   \clearpage
   \pagestyle{plain} % nessuna intestazione e pie pagina con numero al centro
-  \afterpage{\null\thispagestyle{empty}\clearpage}
 
   
   % inizio numerazione pagine in numeri arabi
@@ -82,14 +73,16 @@
 
     % indice
     \tableofcontents
-    \afterpage{\null\thispagestyle{empty}\clearpage}
+    \clearpage
+    
+    
           
     % gruppo per definizone di successione capitoli senza interruzione di pagina
     \begingroup
       % nessuna interruzione di pagina tra capitoli
       % ridefinizione dei comandi di clear page
-      % \renewcommand{\cleardoublepage}{} 
-      % \renewcommand{\clearpage}{} 
+      \renewcommand{\cleardoublepage}{} 
+      \renewcommand{\clearpage}{} 
       % redefinizione del formato del titolo del capitolo
       % da formato
       %   Capitolo X
@@ -105,9 +98,7 @@
       \titlespacing*{\subsection}{0pt}{0.10in}{0.02in}
       
       % sommario
-      \input{abstract}
-      \afterpage{\null\thispagestyle{empty}\clearpage}
-
+      \input{sommario}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Nota
@@ -129,30 +120,22 @@
       %
       % \input oppure \include
       %
-      \input{introduction}
-      \afterpage{\null\thispagestyle{empty}\clearpage}
-      \input{state_of_art}
-      \afterpage{\null\thispagestyle{empty}\clearpage}
-      \input{system_design}
-      \afterpage{\null\thispagestyle{empty}\clearpage}
-      \input{implementation}
-      \afterpage{\null\thispagestyle{empty}\clearpage}
-      \input{evaluation}
-      \afterpage{\null\thispagestyle{empty}\clearpage}
-      \input{conclusions}
-      \afterpage{\null\thispagestyle{empty}\clearpage}
+      \input{capitolo1}
+      \input{capitolo2}
+      \input{capitolo3}
+      %\input{capitolo4}
+      
       
     \endgroup
+
 
     % bibliografia in formato bibtex
     %
     % aggiunta del capitolo nell'indice
-    % \addcontentsline{toc}{chapter}{Bibliography}
+    \addcontentsline{toc}{chapter}{Bibliografia}
     % stile con ordinamento alfabetico in funzione degli autori
-    % \bibliographystyle{plain}
-    % \bibliography{bibliography}
-    \printbibliography[heading=bibintoc, title={Bibliography}]
-
+    \bibliographystyle{plain}
+    \bibliography{biblio}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Nota
@@ -182,10 +165,10 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
     
 
-    % titleformat{\chapter}
-    %     {\normalfont\Huge\bfseries}{Attachment \thechapter}{1em}{}
+    \titleformat{\chapter}
+        {\normalfont\Huge\bfseries}{Allegato \thechapter}{1em}{}
     % sezione Allegati - opzionale
-    % \appendix
-    % \input{attachments}
+    \appendix
+    \input{allegati}
 
 \end{document}
